<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <include
        android:id="@+id/setting_toolbar"
        layout="@layout/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/enterEquation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="bottom"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape"
                android:backgroundTint="#f27311"
                android:onClick="clearBTN"
                android:text="@string/clear"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/exponentBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape2"
                android:onClick="exponentBTN"
                android:text="@string/exponent"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/parenthesesBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape2"
                android:onClick="parenthesesBTN"
                android:text="@string/parentheses"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/divideBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape2"
                android:onClick="divideBTN"
                android:text="@string/divide"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape"
                android:onClick="sevenBTN"
                android:text="@string/seven"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/eightBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape"
                android:onClick="eightBTN"
                android:text="@string/eight"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/nineBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape"
                android:onClick="nineBTN"
                android:text="@string/nine"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/multiplyBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape2"
                android:onClick="multiplyBTN"
                android:text="@string/multiply"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape"
                android:onClick="fourBTN"
                android:text="@string/four"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/fiveBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape"
                android:onClick="fiveBTN"
                android:text="@string/five"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/sixBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape"
                android:onClick="sixBTN"
                android:text="@string/six"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/subtractBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape2"
                android:onClick="subtractBTN"
                android:text="@string/subtract"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape"
                android:onClick="oneBTN"
                android:text="@string/one"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/twoBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape"
                android:onClick="twoBTN"
                android:text="@string/two"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/threeBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape"
                android:onClick="threeBTN"
                android:text="@string/three"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/addBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape2"
                android:onClick="addBTN"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusMinusBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape2"
                android:onClick="plusMinusBTN"
                android:text="@string/plusMinus"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/zeroBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape"
                android:onClick="zeroBTN"
                android:text="@string/zero"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/pointBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape2"
                android:onClick="pointBTN"
                android:text="@string/point"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/equalsBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rect_shape"
                android:backgroundTint="#008c05"
                android:onClick="equalsBTN"
                android:text="@string/equals"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/enterEquation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints="false"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:inputType="none"
        android:text="@string/display"
        android:textColor="@color/white"
        android:textAlignment="textEnd"
        android:textSize="34sp"
        android:backgroundTint="@color/dark_yellow"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_toolbar" />

    <TextView
        android:id="@+id/resultToWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/enterEquation"
        tools:layout_editor_absoluteX="179dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textAlignment="textStart"/>

    <ImageButton
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@drawable/rect_shape"
        app:srcCompat="@drawable/back_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/backspace"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="backspaceBTN"/>

    <ImageButton
        android:id="@+id/englishBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="setEnglish"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/englishflag"/>

    <ImageButton
        android:id="@+id/vietnameseBTN"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="setVietnamese"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintStart_toEndOf="@+id/englishBTN"
        app:srcCompat="@drawable/vietnamflag"
        />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent">
    </com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>